--- a/notas.ipynb
+++ b/notas.ipynb
@@ -6,7 +6,81 @@
    "source": [
     "NETFLIX\n",
     "\n",
-    "Columna agregada --> Open - close --> correlacionar vs Volume"
+    "Columna agregada --> (Open - close) --> correlacionar vs Volume"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### GRAFICO waterfall charts --> comparar variaciones desde un estado inicial\n",
+    "\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.ticker import FuncFormatter\n",
+    "\n",
+    "def waterfall_chart(index, data, Title=\"\", x_lab=\"\", y_lab=\"\", formatting=\"{:,.1f}\", \n",
+    "                    green_color='#29EA38', red_color='#FB3C62', blue_color='#24CAFF', \n",
+    "                    sorted_value=False, threshold=None, other_label=\"other\", net_label=\"net\"):\n",
+    "    \"\"\"\n",
+    "    Given an index and data, produces a waterfall chart\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # sort data and index if sorted_value is True\n",
+    "    if sorted_value: data, index = zip(*sorted(zip(data, index)))\n",
+    "    \n",
+    "    # Determine where to split the data into pos, neg, and total\n",
+    "    split = len(data) if threshold is None else threshold\n",
+    "    data = np.array(data)\n",
+    "    index = np.array(index)\n",
+    "    \n",
+    "    # Reorder data\n",
+    "    data_pos = np.clip(data, 0, None)\n",
+    "    data_neg = np.clip(data, None, 0)\n",
+    "    \n",
+    "    # The net value is either the last element in the data set\n",
+    "    # or a sum of the positive values if a threshold is set\n",
+    "    net = data[-1] if threshold is None else data_pos[split:].sum()\n",
+    "    data = np.append(data[:split], net)\n",
+    "    index = np.append(index[:split], net_label)\n",
+    "\n",
+    "    # Set up the figure\n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.xaxis.set_major_formatter(FuncFormatter(lambda x, _: formatting.format(x)))\n",
+    "\n",
+    "    # Create the base line\n",
+    "    start = 0\n",
+    "    for i in range(len(data)):\n",
+    "        end = start + data[i]\n",
+    "        \n",
+    "        # Adding positive data\n",
+    "        if data[i] >= 0:\n",
+    "            ax.bar(index[i], end - start, bottom=start, color=green_color)\n",
+    "        # Adding negative data\n",
+    "        else:\n",
+    "            ax.bar(index[i], start - end, bottom=end, color=red_color)\n",
+    "        \n",
+    "        start = end\n",
+    "    \n",
+    "    # Add the total bar\n",
+    "    if threshold is not None:\n",
+    "        ax.bar(index[-1], data[-1], color=blue_color)\n",
+    "\n",
+    "    # Set the chart's title and axis labels\n",
+    "    ax.set_title(Title)\n",
+    "    ax.set_xlabel(x_lab)\n",
+    "    ax.set_ylabel(y_lab)\n",
+    "\n",
+    "    plt.xticks(rotation=90)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "# Example data\n",
+    "index = ['start', 'add1', 'add2', 'sub1', 'sub2', 'total']\n",
+    "data = [0, 10, 5, -3, -7, 5]  # Start from zero for the initial value\n",
+    "\n",
+    "waterfall_chart(index, data, formatting=\"{:,.0f}\")"
    ]
   }
  ],
